--- a/how_it_works.html
+++ b/how_it_works.html
@@ -32,16 +32,16 @@
 		<div id="box_6">
 			<ul class="whatare_1">
 				<li>
-					<p style="color:#0c008b";>Learning pods are a new, safe way to allow kids to meet and study together. </p>
+					<p>Learning pods are a new, safe way to allow kids to meet and study together. </p>
 				</li>
 				<li>
-					<p style="color:#0c008b";> Small groups that kids can meet in to study/play together in person or online </p>
+					<p> Small groups that kids can meet in to study/play together in person or online </p>
 				</li>
 				<li>
-					<p style="color:#0c008b";>Groups are organized by grade level and proximity </p>
+					<p>Groups are organized by grade level and proximity </p>
 				</li>
 				<li>
-					<p style="color:#0c008b";>Group size can range from 2-12 kids, depending on the number of students nearby/parent
+					<p>Group size can range from 2-12 kids, depending on the number of students nearby/parent
 						preferences</p>
 				</li>
 			</ul>
@@ -57,14 +57,14 @@
 			<ul class="whatare">
 
 				<li>
-					<p style="color:#0c008b";>Kids can meet (while staying socially distanced) and work together on projects and school lessons
+					<p>Kids can meet (while staying socially distanced) and work together on projects and school lessons
 					</p>
 				</li>
 				<li>
-					<p style="color:#0c008b";>Also can do virtual learning pods (if they prefer that over in person) </p>
+					<p>Also can do virtual learning pods (if they prefer that over in person) </p>
 				</li>
 				<li>
-					<p style="color:#0c008b";>This gives students a more in person learning experience that is OUTSIDE of the classroom,
+					<p>This gives students a more in person learning experience that is OUTSIDE of the classroom,
 						benefiting their social/emotional health as well as allowing them to have a study group or
 						playgroup outside of just school </p>
 				</li>
