--- a/infoform.html
+++ b/infoform.html
@@ -38,7 +38,7 @@
         </header>
         <h1 class = "headtop"> Plese Enter The Following Information </h1>
         <div class = "headtop">
-            <h1 style="float: left;">Enter your grade : </h1>
+            <h1 style="float: left; font-size: 20px;">Enter your grade : </h1>
             <form style="padding-left: 700px">
                 <select name = "dropdown" id = "drop" style="padding-left: 10px; margin: auto; height: 100px; width: 135px; margin-left: auto; margin-right: auto; float: left;">
                     <option value = "K" selected>K</option>
