--- a/infoform.html
+++ b/infoform.html
@@ -38,9 +38,9 @@
         </header>
         <h1 class = "headtop"> Plese Enter The Following Information </h1>
         <div class = "headtop">
-            <h1 style="float: left; font-size: 20px;">Enter your grade : </h1>
-            <form style="padding-left: 400px">
-                <select name = "dropdown" id = "drop" style="padding-left: 10px; margin: auto; height: 50px; width: 65px; margin-left: auto; margin-right: auto; float: left;">
+            <h1 style="float: left; font-size: 25px;">Enter your grade : </h1>
+            <form style="padding-left: 300px">
+                <select name = "dropdown" id = "drop" style="padding-left: 10px; margin: auto; height: 60px; width: 75px; margin-left: auto; margin-right: auto; float: left;">
                     <option value = "K" selected>K</option>
                     <option value = "1">1</option>
                     <option value = "2">2</option>
@@ -58,9 +58,9 @@
             </form>
         </div>
         <div class = "headtop" style="padding-top: 250px;">
-            <h1 style="float: left;">Enter your school: </h1>
-            <form style="padding-left: 700px">
-                <input name = "dropdown" id = "enterin"style="padding-left: 10px; margin: auto; height: 100px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
+            <h1 style="float: left; font-size: 25px">Enter your school: </h1>
+            <form style="padding-left: 300px">
+                <input name = "dropdown" id = "enterin"style="padding-left: 10px; margin: auto; height: 60px; width: 75px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
         <div class = "headtop" style="padding-top: 250px;">
