--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div style="text-align: center;">
             <h2 class="headtop">Would you like to support us?</h2>
             <br>
-            <a><button href="https://rishikumar.com/contribute"> Please contribute here!</button></a>
+            <a href="https://rishikumar.com/contribute"><button> Please contribute here!</button></a>
             <br><br>
         </div>
         <div class="credits"">
