--- a/how_it_works.html
+++ b/how_it_works.html
@@ -53,7 +53,7 @@
 
 		<img src="Boyandagirlpainting.jpg" height="200" width="360" style="padding-left:50px; padding-right: 10px">
 
-		<div id="box_7">
+		<div id="box_7" style="background-color:#151B54;">
 			<ul class="whatare">
 
 				<li>
