--- a/how_it_works.html
+++ b/how_it_works.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="background">
 		<h1 class="headtop">What are learning pods?</h1>
-		<div id="box_6">
+		<div id="box_6" style="background-color:#151B54;">
 			<ul class="whatare_1">
 				<li>
 					<p>Learning pods are a new, safe way to allow kids to meet and study together. </p>
