--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="whowe" id=whoarewe>
         <h1 class="headtop">Who are we?</h1>
-        <h2 class="headtext">Supported from the Rishi Kumar for Congress campaign, Learning pods is a student run,
+        <h2 class="headtext">Supported from the Rishi Kumar for Congress campaign, The Learning Pod is a student run,
             non-profit grassroots organization dedicated to helping students learn and grow outside of the classroom. We
             realized because of the corona virus many students are not getting the learning opportunities they desired.
             Hence, learning pod stepped in. We have a fascination in tech and try to help our community everyday. We
@@ -48,10 +48,10 @@
     </div>
     <div class="faq" id=FAQ>
         <h1 class="headtop">FAQ'S</h1>
-        <h2 class="headtext">Q: Why learning Pods</h2>
+        <h2 class="headtext">Q: Why learning Pods?</h2>
         <h2 class="headtext">A: Because of its universal use and ease of use. It helps other with minimal use!</h2>
         <h2 class="headtext">Q: How do I sign up?</h3>
-            <h2 class="headtext">Simply click the sign up button in the top left hand corner in order to sign up!</h2>
+            <h2 class="headtext">Simply click the sign up button in the top right hand corner in order to sign up!</h2>
     </div>
     <div class="whowe" id=contact>
         <h1 class="headtop">Contact Info</h1>
