--- a/inperson.html
+++ b/inperson.html
@@ -10,15 +10,17 @@
         <meta name = "google-signin-client_id" content="109287550034-163r9566bl2oapkjopum362e796kdah4.apps.googleusercontent.com">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
     </head>
-    <body style = "background-color: #1f1f22;">
+    <body style = "background-color: #151B54;">
         <header>
             <img class = "logo" src = "newlogo2.svg" alt = "logo">
             <nav>
                 <ul class = "nav_links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html">FAQ'S</a></li>
-                    <li><a href="index.html">Contact</a></li>
+                    <li><a href="how_it_works.html">How It Works</a></li>
+                    <li><a href="FAQs.html">FAQ'S</a></li>
+                    <li><a href="who_are_we.html">About Us</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+
                 </ul>
             </nav>
             <a class="cta" href = "loginpage.html" ><button>Sign Up / Log In</button></a>
