--- a/infoform.html
+++ b/infoform.html
@@ -60,13 +60,13 @@
         <div class = "headtop" style="padding-top: 250px;">
             <h1 style="float: left; font-size: 25px">Enter your school: </h1>
             <form style="padding-left: 300px">
-                <input name = "dropdown" id = "enterin"style="padding-left: 10px; margin: auto; height: 60px; width: 75px; margin-left: auto; margin-right: auto; float: left;"></input>
+                <input name = "dropdown" id = "enterin"style="padding-left: 10px; margin: auto; height: 60px; width: 120px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
         <div class = "headtop" style="padding-top: 250px;">
-            <h1 style="float: left;">Enter your preferred email:   </h1>
-            <form style="padding-left: 700px">
-                <input name = "emailin" id = "getemail"style="padding-left: 10px; margin: auto; height: 100px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
+            <h1 style="float: left; font-size: 25px">Enter your preferred email:   </h1>
+            <form style="padding-left: 300px">
+                <input name = "emailin" id = "getemail"style="padding-left: 10px; margin: auto; height: 60px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
         <div style="padding-top: 250px; text-align: center">
