--- a/how_it_works.html
+++ b/how_it_works.html
@@ -29,7 +29,8 @@
 	</div>
 	<div class="background">
 		<h1 class="headtop">What are learning pods?</h1>
-		<div id="box_6">
+		<br><br><br>
+		<div id="box_6" style="background: #0083a9">
 			<ul class="whatare_1">
 				<li>
 					<p>Learning pods are a new, safe way to allow kids to meet and study together. </p>
@@ -46,29 +47,30 @@
 				</li>
 			</ul>
 		</div>
-		<div>
-			<img src="high_school_students.jpg" height="280" width="420" style="padding-left:50px">
+		<div style="background: #0083a9">
+			<img src="high_school_students.jpg" height="300" width="420">
 		</div>
 		<br><br><br>
-
-		<img src="Boyandagirlpainting.jpg" height="200" width="360" style="padding-left:50px; padding-right: 10px">
-
-		<div id="box_7" style="background-color:#151B54;">
-			<ul class="whatare">
-
-				<li>
-					<p>Kids can meet (while staying socially distanced) and work together on projects and school lessons
-					</p>
-				</li>
-				<li>
-					<p>Also can do virtual learning pods (if they prefer that over in person) </p>
-				</li>
-				<li>
-					<p>This gives students a more in person learning experience that is OUTSIDE of the classroom,
-						benefiting their social/emotional health as well as allowing them to have a study group or
-						playgroup outside of just school </p>
-				</li>
-			</ul>
+		<div>
+			<img src="Boyandagirlpainting.jpg" height="200" width="360">
+			
+			<div id="box_7">
+				<ul class="whatare">
+			
+					<li>
+						<p>Kids can meet (while staying socially distanced) and work together on projects and school lessons
+						</p>
+					</li>
+					<li>
+						<p>Also can do virtual learning pods (if they prefer that over in person) </p>
+					</li>
+					<li>
+						<p>This gives students a more in person learning experience that is OUTSIDE of the classroom,
+							benefiting their social/emotional health as well as allowing them to have a study group or
+							playgroup outside of just school </p>
+					</li>
+				</ul>
+			</div>
 		</div>
 
 		<img class="center" src="Learning_Pods_Flow_Chart - Page 1-4.png">
