Fix color schemes

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -51,8 +51,8 @@
 			<img src="high_school_students.jpg" height="300" width="420">
 		</div>
 		<br><br><br>
-		<div>
-			<img src="Boyandagirlpainting.jpg" height="200" width="360">
+		<div style="padding-bottom: 30px;">
+			<img src="Boyandagirlpainting.jpg" height="100%" width="360">
 			
 			<div id="box_7">
 				<ul class="whatare">
@@ -72,8 +72,9 @@
 				</ul>
 			</div>
 		</div>
-
-		<img class="center" src="Learning_Pods_Flow_Chart - Page 1-4.png">
+		<div style="background: #0083a9;">
+			<img class="center" src="Learning_Pods_Flow_Chart - Page 1-4.png">
+		</div>
 
 
 		<br><br><br><br><br>
