--- a/virtual.html
+++ b/virtual.html
@@ -10,7 +10,7 @@
         <meta name = "google-signin-client_id" content="109287550034-163r9566bl2oapkjopum362e796kdah4.apps.googleusercontent.com">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
     </head>
-    <body style = "background-color: #1f1f22;">
+    <body style = "background-color: #151B54;">
         <header>
             <img class = "logo" src = "newlogo2.svg" alt = "logo">
             <nav>
