--- a/infoform.html
+++ b/infoform.html
@@ -39,7 +39,7 @@
         <h1 class = "headtop"> Plese Enter The Following Information </h1>
         <div class = "headtop">
             <h1 style="float: left; font-size: 25px;">Enter your grade : </h1>
-            <form style="padding-left: 300px">
+            <form style="transform: translateX(50px) translateY(-10px);">
                 <select name = "dropdown" id = "drop" style="padding-left: 10px; margin: auto; height: 60px; width: 75px; margin-left: auto; margin-right: auto; float: left;">
                     <option value = "K" selected>K</option>
                     <option value = "1">1</option>
@@ -59,13 +59,13 @@
         </div>
         <div class = "headtop" style="padding-top: 250px;">
             <h1 style="float: left; font-size: 25px">Enter your school: </h1>
-            <form style="padding-left: 300px">
+            <form style="transform: translateX(50px) translateY(-10px);">
                 <input name = "dropdown" id = "enterin"style="padding-left: 10px; margin: auto; height: 60px; width: 120px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
         <div class = "headtop" style="padding-top: 250px;">
             <h1 style="float: left; font-size: 25px">Enter your preferred email:   </h1>
-            <form style="padding-left: 300px">
+            <form style="transform: translateX(50px) translateY(-10px);">
                 <input name = "emailin" id = "getemail"style="padding-left: 10px; margin: auto; height: 60px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
