--- a/displaypod.html
+++ b/displaypod.html
@@ -57,14 +57,13 @@
         <table id = "podtable" width = "100%"></table>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
-
         <!-- TODO: Add SDKs for Firebase products that you want to use
             https://firebase.google.com/docs/web/setup#available-libraries -->
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
         <script src = "firebaseConfig.js"></script>
         <script src = "index.js"></script>
-        <table id="myTable">
+        <table style = "padding-bottom: 50px" id="myTable">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -79,6 +78,8 @@
                 </tr>
             <tfoot>
         </table>
+        <div style="text-align: center; padding-top: 40px; padding-bottom: 50px;">
+            <button type = "button" onclick="leavePod()">Leave Pod</button>
         <script src = "loaddata.js"></script>
     </body>
 </html>
