--- a/infoform.html
+++ b/infoform.html
@@ -69,6 +69,12 @@
                 <input name = "emailin" id = "getemail"style="padding-left: 10px; margin: auto; height: 60px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
+        <div class = "headtop" style="padding-top: 250px;">
+            <h1 style="float: left; font-size: 25px">Enter your zip code:   </h1>
+            <form style="transform: translateX(50px) translateY(-10px);">
+                <input name = "zip" id = "getzip"style="padding-left: 10px; margin: auto; height: 60px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
+            </form>
+        </div>
         <div style="padding-top: 250px; text-align: center">
             <button type = "button" onclick="clickedFunc()">Submit</button>
     </body>    
