Added a lot of ui changes

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -72,8 +72,8 @@
 				</ul>
 			</div>
 		</div>
-		<div style="background: #0083a9;">
-			<img class="center" src="Learning_Pods_Flow_Chart - Page 1-4.png">
+		<div style="background: #0083a9">
+			<img class="center" src="flowchart23.png">
 		</div>
 
 
