--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
     </header>
     <div style="height: auto">
-        <img src="https://learningpods--abhimukherjee.repl.co/Teacher_teaching.jpg" alt=" "
-            style="width: 100%;max-height: 100%" />
+        <img src="Teacher_teaching.jpg" alt=" "
+            style="width: 100%;" />
     </div>
     <div class="whatis" id=whatisit>
         <h1 class="headtop">What are learning pods?</h1>
