--- a/who_are_we.html
+++ b/who_are_we.html
@@ -72,7 +72,7 @@
 			<h2 class="footer-text"> COMMITTEE ID C00695866 | FEC ID 1356261 </h2>
 			<h2 class="footer-text"> Kumar for Congress, P O BOX 2653, Saratoga CA 95070.</h2>
 			<br>
-			<h2 class="footer-text">Developed by Abhinav Mukherjee, Kshitij Teotia, Vishnu Potharaju, and Vineet Rao
+			<h2 class="footer-text">Developed by Vineet Rao, Kshitij Teotia, Vishnu Potharaju, and Abhinav Mukherjee
 			</h2>
 			<br>
 		</div>
